--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Easy MVVM</string>
-    <string name="holiday_activity_java">HolidayActivityJava</string>
-    <string name="holiday_activity_kotlin">HolidayActivityKotlin</string>
+    <string name="app_name">MVVM Demo</string>
+    <string name="holiday_activity_java">RecipeActivityJava</string>
+    <string name="holiday_activity_kotlin">RecipeActivityKotlin</string>
 </resources>
